kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-demo
  labels:
    app.kubernetes.io/part-of: schwab-sre-assessment
